--- a/app/cabinet-profile.html
+++ b/app/cabinet-profile.html
@@ -291,7 +291,7 @@
                 <!--                        <span class="menu-profile__text">Избранное</span>-->
                 <!--                    </a>-->
                 <!--                </li>-->
-                <li class="active">
+                <li>
                     <a href="#history-orders" class="menu-profile__links" data-toggle="tab">
                         <svg class="menu-profile__icon">
                             <use xlink:href="img/svg-sprite/main-sprite.svg#cabinet-menu-icon3"></use>
@@ -300,7 +300,7 @@
                     </a>
                 </li>
 
-                <li>
+                <li class="active">
                     <a href="#cabinet-callback" class="menu-profile__links" data-toggle="tab">
                         <svg class="menu-profile__icon">
                             <use xlink:href="img/svg-sprite/main-sprite.svg#cabinet-menu-icon4"></use>
@@ -508,7 +508,7 @@
                     <a href="#" class="load-more">Показать еще</a>
                 </div>
 
-                <div class="tab-pane fade show active in" id="history-orders">
+                <div class="tab-pane fade" id="history-orders">
                     <div class="h1">Заказ № 3313413, создан 19.08.2020</div>
 
                     <div class="history-orders">
@@ -614,7 +614,109 @@
 
                 </div>
 
-                <div class="tab-pane fade" id="cabinet-callback"></div>
+                <div class="tab-pane fade show active in" id="cabinet-callback">
+                    <div class="h1">Обратная связь</div>
+
+                    <form method="post" class="form-cabinet-callback">
+                        <label>
+                            <textarea name="message"></textarea>
+                        </label>
+
+                        <div class="form-bottom">
+                            <button type="submit" class="btn-blue">Отправить</button>
+                        </div>
+                    </form>
+
+
+                    <div class="history-chating">
+                        <div class="history-orders__details-title">
+                            История переписки
+
+                            <div class="chating-val">20 сообщений</div>
+                        </div>
+
+                        <div class="history-chating__body">
+                            <div class="history-chating__box">
+                                <div class="history-chating__avatar"><img src="img/chat-ava.svg" alt=""></div>
+
+                                <div class="history-chating__content">
+                                    <div class="history-chating__content-line">
+                                        <div class="history-chating__content-title">Техподдержка Moreani</div>
+                                        <div class="history-chating__content-date">3 сентября 2020 г.
+                                            17:33
+                                        </div>
+                                    </div>
+
+                                    <div class="history-chating__content-text">
+                                        <p>Вальдорфский салат (или салат Вальдорф) был придуман ещё в позапрошлом
+                                            веке.</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="history-chating__box">
+                                <div class="history-chating__avatar"><img src="img/photo-user.png" alt=""></div>
+
+                                <div class="history-chating__content">
+                                    <div class="history-chating__content-line">
+                                        <div class="history-chating__content-title">Александр К.</div>
+                                        <div class="history-chating__content-date">3 сентября 2020 г.
+                                            17:33
+                                        </div>
+                                    </div>
+
+                                    <div class="history-chating__content-text">
+                                        <p>Вальдорфский салат (или салат Вальдорф) был придуман ещё в позапрошлом веке.
+                                            Сейчас его как правило готовят с виноградом, однако он вошёл в рецептуру
+                                            вальдорфского салата вместе с грецкими орехами только в 1928 году. Сегодня
+                                            мы приготовим версию этого салата, близкую к изначальной. Это безумно
+                                            просто!</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="history-chating__box">
+                                <div class="history-chating__avatar"><img src="img/chat-ava.svg" alt=""></div>
+
+                                <div class="history-chating__content">
+                                    <div class="history-chating__content-line">
+                                        <div class="history-chating__content-title">Техподдержка Moreani</div>
+                                        <div class="history-chating__content-date">3 сентября 2020 г.
+                                            17:33
+                                        </div>
+                                    </div>
+
+                                    <div class="history-chating__content-text">
+                                        <p>Вальдорфский салат (или салат Вальдорф) был придуман ещё в позапрошлом
+                                            веке.</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="history-chating__box">
+                                <div class="history-chating__avatar"><img src="img/photo-user.png" alt=""></div>
+
+                                <div class="history-chating__content">
+                                    <div class="history-chating__content-line">
+                                        <div class="history-chating__content-title">Александр К.</div>
+                                        <div class="history-chating__content-date">3 сентября 2020 г.
+                                            17:33
+                                        </div>
+                                    </div>
+
+                                    <div class="history-chating__content-text">
+                                        <p>Вальдорфский салат (или салат Вальдорф) был придуман ещё в позапрошлом веке.
+                                            Сейчас его как правило готовят с виноградом, однако он вошёл в рецептуру
+                                            вальдорфского салата вместе с грецкими орехами только в 1928 году. Сегодня
+                                            мы приготовим версию этого салата, близкую к изначальной. Это безумно
+                                            просто!</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
             </div>
 
         </div>
