--- a/app/cabinet-profile.html
+++ b/app/cabinet-profile.html
@@ -623,7 +623,7 @@
                         </label>
 
                         <div class="form-bottom">
-                            <button type="submit" class="btn-blue">Отправить</button>
+                            <button type="button" class="btn-blue">Отправить</button>
                         </div>
                     </form>
 
